@@ -1,7 +1,7 @@
 #!/bin/bash
 ##########################################################################
 # Created by Angel Leon (@gubatron)
-# Copyright (c) 2011-2021, FrostWire(R). All rights reserved.
+# Copyright (c) 2011-2022, FrostWire(R). All rights reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
